force-app/main/default/objects/Achievement__c/Achievement__c.object-meta.xml
<CustomObject>
    <description
    >A point transaction record for a participant being rewarded for completing a goal.</description>
    <label>Achievement</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Acheivement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>