force-app/main/default/objects/Achievement__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <length>63</length>
    <type>Text</type>
</CustomField>