force-app/main/default/objects/Achievement__c/fields/Object_Modified__c.field-meta.xml
<CustomField>
    <fullName>Object_Modified__c</fullName>
    <formula
    >IF( Object_Id__c != &apos;&apos;, HYPERLINK(&apos;/&apos; +  Object_Id__c , Object_Id__c, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Modified</label>
    <type>Text</type>
</CustomField>