force-app/main/default/objects/Achievement__c/fields/Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded__c</fullName>
    <label>Points Awarded</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>