force-app/main/default/objects/Achievement__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>